InCall: make non-intrusive dialog for incoming calls themable
Change-Id: I5a0215318a481c549cff20c6280693be51f89eb4
Signed-off-by: Dan Trifan <jimsth@gmail.com>

--- a/res/layout/card_call_incoming.xml
+++ b/res/layout/card_call_incoming.xml
@@ -35,7 +35,7 @@
             android:ellipsize="marquee"
             android:gravity="center_vertical"
             android:lines="1"
-            android:textColor="#333333"
+            android:textColor="@color/incall_call_txt_contact_name"
             android:layout_above="@+id/linearLayout"
             android:textSize="24sp" />
 
@@ -57,7 +57,7 @@
                 style="@android:style/Widget.Holo.Button.Borderless"
                 android:drawableLeft="@drawable/ic_lockscreen_decline_normal"
                 android:text="@string/description_target_decline"
-                android:textColor="#000000"
+                android:textColor="@color/incall_call_btn_reject_txt"
                 android:textSize="13sp"
                 android:ellipsize="none" />
 
@@ -67,7 +67,7 @@
                 android:layout_height="fill_parent"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
-                android:background="#888888"
+                android:background="@color/incall_call_txt_separator"
                 android:maxWidth="0dp" />
 
             <Button
@@ -78,7 +78,7 @@
                 style="@android:style/Widget.Holo.Button.Borderless"
                 android:drawableLeft="@drawable/ic_lockscreen_answer_normal"
                 android:text="@string/description_target_answer"
-                android:textColor="#000000"
+                android:textColor="@color/incall_call_btn_answer_txt"
                 android:textSize="13sp"
                 android:ellipsize="none" />
         </LinearLayout>
