--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -23,6 +23,10 @@
     <color name="incall_secondary_info_background">#8033b5e5</color> <!-- semitransparent blueish grey -->
     <color name="incall_call_banner_text_color">#FFFFFF</color> <!-- white -->
     <color name="incall_call_glowpad_background">#A0000000</color> <!-- semitransparent black -->
+    <color name="incall_call_txt_contact_name">#333333</color>
+    <color name="incall_call_btn_reject_txt">#000000</color>
+    <color name="incall_call_txt_separator">#888888</color>
+    <color name="incall_call_btn_answer_txt">#000000</color>
 
     <!-- DTMF Dialer -->
     <color name="dtmf_dialer_display_text">#FFFFFF</color> <!-- white -->
