--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -24,6 +24,10 @@
     <color name="incall_call_banner_text_color">#FFFFFF</color> <!-- white -->
     <color name="incall_button_background">#2A2A2A</color>
     <color name="incall_call_glowpad_background">#40000000</color> <!-- semitransparent black -->
+    <color name="incall_call_txt_contact_name">#333333</color>
+    <color name="incall_call_btn_reject_txt">#000000</color>
+    <color name="incall_call_txt_separator">#888888</color>
+    <color name="incall_call_btn_answer_txt">#000000</color>
 
     <!-- DTMF Dialer -->
     <color name="dtmf_dialer_display_text">#FFFFFF</color> <!-- white -->
